<resources>
    <string name="app_name">ecuPickers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <!--Titulos Slide menu-->
    <string name="pantalla_inicio">Tus Pedidos</string>
    <string name="gestional_local">Tu Local</string>
    <string name="gestionar_productos">Tus Productos</string>
    <string name="gestionar_perfil">Editar Perfil</string>
    <!--Titulos de pantallas-->
    <string name="tu_inicio">Tu Inicio</string>
    <string name="editar_cuenta">Editar Cuenta</string>
    <!--Rango hora  -->
    <string name="min">Min</string>
    <string name="am">Hora Inicio</string>
    <string name="pm">Hora Cierre</string>
    <!--Botones-->
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar">Editar</string>
    <string name="añadir_categoria">Añadir Categoria</string>
    <string name="ok">OK</string>
    <string name="añadir_nuevo_producto">Añadir nuevo producto</string>
    <string name="añadir">Añadir</string>
    <string name="guardar">Guardar</string>
    <string name="crear">Crear</string>
    <string name="añadir_producto_existente_menu">Añadir producto existente a este menu</string>
    <!--Estados-->
    <string name="nuevo_pedido">Nuevos Pedidos</string>
    <string name="preparando">Preparando</string>
    <string name="cocinado">Cocinado</string>
    <string name="en_proceso_entrega">En proceso de entrega</string>
    <string name="entregados">Entregados</string>
    <!--Perfil Textos-->
    <string name="primer_nombre">Primer Nombre:</string>
    <string name="primer_apellido">Primer Apellido:</string>
    <string name="segundo_nombre">Segundo Nombre:(Opcional)</string>
    <string name="segundo_apellido">Segundo Apellido:(Opcional)</string>
    <string name="telefono">Telefono:</string>

    <string name="correo">Correo Electronico:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="direccion">Dirección</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="pais">Pais</string>
    <!--Creacion Productos-->
    <string name="nombre_producto">Nombre del Producto</string>
    <string name="descripcion">Descripción</string>
    <string name="categoria">Categoria:</string>
    <string name="precio">Precio:</string>
    <string name="tiempo_estimado">Tiempo estimado</string>
    <string name="menu_opcional">Menu (Opcional)</string>
    <!--Crear nuevo Menu-->
    <string name="nombre_del_menu">Nombre del Menu</string>
    <!--Gestionar Local-->
    <string name="nombre_local">Nombre del Local </string>
    <!--PopUp Añadir producto a erste menu-->
    <string name="añadir_productos_al_menu">Añadir productos al Menu </string>
    <string name="elija_categoria">Elija la categoria a mostrar:</string>
    <string name="elija_producto">Elija los productos a añadir</string>
    <string name="productos_seleccionados">Productos seleccionados</string>

    <!--Registro e Inicio -->

    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="crear_cuenta">Crear Nueva Cuenta</string>
    <string name="olvidaste_la_contraseña">Olvidaste la Contraseña?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_tu_inicio">Inicio</string>
    <string name="menu_tus_productos">Tus Productos</string>
    <string name="menu_tu_local">Tu local</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar_menu">Editar nombre del menu</string>
    <string name="eliminar_menu">Eliminar el menu</string>
    <string name="eliminar_menu_titulo">¿Desea eliminar el menu?</string>
    <string name="advertencia_eliminar_menu">Si elimina el menu se desvinculara todos los productos del menu,no se eliminara ningun producto solo el menu</string>


</resources>
