<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menos_circle"
            android:title="@string/menu_tu_inicio" />
        <item
            android:id="@+id/nav_tus_productos"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_tus_productos" />
        <item
            android:id="@+id/nav_tu_local"
            android:icon="@drawable/ic_money"
            android:title="@string/menu_tu_local" />
        <item
            android:id="@+id/nav_cerrar_secion"
            android:icon="@drawable/ic_menos"
            android:title="logout" />
    </group>
</menu>
