<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.gestionarLocal.FragmentLocal"
    >
    <item
        android:id="@+id/menu_editar"
        android:icon="@drawable/ic_edit"
        android:title="@string/editar"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_editar"
                android:icon="@drawable/ic_edit"
                android:title="@string/editar" />

            <item
                android:id="@+id/action_guardar"
                android:icon="@drawable/ic_guardar"
                android:title="@string/guardar" />
            <item
                android:id="@+id/action_cancelar"
                android:icon="@drawable/ic_cancel"
                android:title="@string/cancelar" />
        </menu>
    </item>


</menu>
